layout issues solved

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
  }
 
  @mixin f-thin {
@@ -43,16 +45,18 @@ nav {
 
     p {
         @include f-thin;
-        margin-top: 50px;
+        padding: 50px;
+        
     }
 }
 
 .img-content {
     grid-area: 2/2/3/3;
     background: green;
+    max-width: 100%;
 
     img {
+        padding: 50px;
         max-width: 100%;
-        margin-top: 50px;
     }
 }
